2006-10-03    <tino@firebird.03.softkill.net>

	* md5.h (tino_MD5Update): function prototype make more compatible

	* getopt.h (tino_getopt_var_set_arg_imp): warning about possibly
	uninitialized variable removed.
	(tino_getopt_arg): cast of ptrdiff_t to int needed
	
	* codec.h (tino_dec_hex): GCC in Ubuntu is a little bit picky
	about casts in lvalues.

	* setuptino.sh, Makefile.proto, Makefile-tino.sh, Makefile (GAWK):
	gawk replaced by gawk, as Ubuntu has no gawk under awk

2006-09-27    <tino@firebird.03.softkill.net>

	* main.h (tino_main_file): added

	* filetool.h (tino_file_mkdirs_forfile): first argument may be
	NULL, and return values optimized, and bugfix (the routine did not
	work previously, unsigned never is <0, compiler did not issue a
	warning).

2006-08-25    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_set_arg_imp): splitted in two
	(tino_getopt_var_set_arg): TINO_GETOPT_FN implemented

2006-08-24    <tino@firebird.03.softkill.net>

	* getopt.h: min/max commented away for now
	(tino_getopt_arg): FN and VALID_STR commented away

	* data.h (tino_data_handler): create TINO_DATA * if NULL is given
	(tino_data_write): changed such that generic routines are more
	easy (can leave out the error processing).
	(tino_data_buf2, tino_data_buf): added

	* getopt.h: reduced a lot of internal variables, also started to
	cut the oversized and far too big routine tino_getopt_hook
	(previously tino_getopt) into smaller pieces.

2006-08-23    <tino@firebird.03.softkill.net>

	* strwild.h: Unit-Tests and test-main added

	* Makefile-test.sh (unit): bugfix, stderr was not captured

2006-08-16    <tino@firebird.03.softkill.net>

	* proc.h (tino_wait_child_exact): little bugfix

2006-08-15    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_var_set_arg): changed if sequence to
	support arg==0
	(tino_getopt_hook): hook added
	(tino_getopt): created to call tino_getopt_hook

2006-08-14    <tino@firebird.03.softkill.net>
