@@ -72,7 +72,10 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 # $Log$
-# Revision 1.31  2006-10-03 20:26:52  tino
+# Revision 1.32  2006-10-04 00:00:32  tino
+# Internal changes for Ubuntu 64 bit system: va_arg processing changed
+#
+# Revision 1.31  2006/10/03 20:26:52  tino
 # Ubuntu has no gawk as awk, so gawk used instead of awk
 #
 # Revision 1.30  2006/07/29 23:36:21  tino
@@ -249,7 +252,7 @@ clean:
 
 distclean:	clean
 	$(RM) "$(VERSIONFILE).h" $(PROGS) $(PROGS_EXE) $(DISTCLEAN)
-	$(RM) core core.*
+	$(RM) core core.* .#*
 	-$(MAKE) -C tino distclean HERE="$(HERE)"
 #S SUBDIRS CLEANDIRS
 #R	$(MAKE) -C #v# distclean HERE="$(HERE)"
